[package]
name = "anduril-lattice-sdk"
description = "Anduril's Lattice SDK for interacting with Lattice APIs"
homepage = "anduril.com"
documentation = "docs.anduril.com"
repository = "https://github.com/anduril/lattice-sdk-rust"
version = "1.0.0"
edition = "2021"
license-file = "MIT"

[dependencies]
bytes = "1.7.1"
prost = "0.13.1"
pbjson = "0.7"
pbjson-types = "0.7"
serde = "1.0.204"
tonic = { version = "0.12.1", features = ["gzip"] }

[lib]
crate-type = ["lib"]
path = "src/mod.rs"
